force-app/main/default/objects/User_Deactivation_Configuration__mdt/User_Deactivation_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration that controls the user deactivation process.</description>
    <label>User Deactivation Configuration</label>
    <pluralLabel>User Deactivation Configurations</pluralLabel>
</CustomObject>