force-app/main/default/objects/User_Deactivation_Configuration__mdt/fields/Email_Warning_Days__c.field-meta.xml
<CustomField>
    <fullName>Email_Warning_Days__c</fullName>
    <description>Then number of days since the user last login to get a warning email</description>
    <inlineHelpText>Then number of days since the user last login to get a warning email</inlineHelpText>
    <label>Email Warning Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>