force-app/main/default/objects/User_Deactivation_Configuration__mdt/fields/From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Email_Address__c</fullName>
    <label>From Email Address</label>
    <type>Email</type>
</CustomField>