force-app/main/default/objects/User_Deactivation_Configuration__mdt/fields/Warning_Days__c.field-meta.xml
<CustomField>
    <fullName>Warning_Days__c</fullName>
    <description>This is used to query which users need to have a warning email or deactivation email sent to.</description>
    <inlineHelpText>This is used to query which users need to have a warning email or deactivation email sent to.</inlineHelpText>
    <label>Warning Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>